# Calctra

./: CONTRIBUTING.md  README.md  logo.txt  package.json
app/: index.js  server.js
app/api/: routes.js
app/backend/services/: matchingService.js
app/backend/utils/: logger.js  matchingEngine.js  solanaHelpers.js
app/frontend/: app.js  index.html  styles.css
app/frontend/components/: ComputationRequest.js  Dashboard.js  ResourceList.jsx  ResourceProvider.js
app/frontend/pages/: Dashboard.jsx
app/models/: computation.js  resource.js  resource_matching_engine.js  user.js
app/solana-contracts/: cal_token.rs  resource_matching.rs
app/utils/: helpers.js  privacy_computing.js  quality_verification.js  solana_client.js
contracts/: Cargo.toml
contracts/src/: resource_matching.rs  token_contract.rs
contracts/tests/: token_test.rs
