[package]
name = "calctra-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the Calctra decentralized scientific computing platform"
license = "MIT"

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.28.2", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1 